Switched to Fleet

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ bin/
 res/
 
 AOC24.iml
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+gradle/
